Add :on-progress callback to k-means iteration loops (#5)
* Rebrand josh.meanings to mieza.meanings

Rename all namespaces from josh.meanings.* to mieza.meanings.* and move
source/test/benchmark directory trees to match. Update artifact coordinates
from org.clojars.joshua/josh.meanings to ai.mieza/mieza.meanings.

- Rename all Clojure namespaces (josh.meanings, josh.file, josh.test, josh.benchmarks)
- Move source files to src/clj/mieza/, test files to test/mieza/
- Update project.clj: artifact ID, URL, description, REPL namespace
- Update LICENSE: add mieza.ai copyright, retain Joshua Cole credit
- Rewrite README.md with mieza branding and history section
- Update CONTRIBUTING for mieza.ai team
- Update doc/intro.md title and example paths
- Add CHANGELOG entry for the rebrand

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Add open source community foundations

- SECURITY.md with responsible disclosure policy and response SLAs
- .editorconfig for consistent formatting across editors
- .gitattributes for line ending normalization and binary file handling

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Upgrade dependencies for JDK 21 compatibility

- Clojure 1.11.3 -> 1.12.4 (required by neanderthal 0.61.0)
- neanderthal 0.49.1 -> 0.61.0
- tech.ml.dataset 7.030 -> 8.011
- dtype-next 10.113 -> 11.013 (fixes FloatPointer bridge for neanderthal >= 0.49)
- Add MKL redist JAR for neanderthal 0.61.0's JavaCPP 1.5.13
- Add core.cache 1.2.263 and core.memoize 1.2.281 overrides for Clojure 1.12 AOT compat
- Remove jdk.incubator.foreign from JVM opts (removed in JDK 21)
- Fix pre-existing bug: wrong namespace alias in afk.clj (distance/ -> distances/)

All existing tests pass on JDK 21.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Add CPU distance and clustering correctness tests

CPU distance tests:
- Verify all 11 distance functions resolve and return numbers
- Exact value checks for euclidean, man